force-app/main/default/objects/WorkOrder/fields/Contract_Hours_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Hours_Term__c</fullName>
    <description>Restituisce numero di ore da contratto dal relativo contratto</description>
    <formula>Contract__r.Contract_Hours_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Hours Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>