force-app/main/default/objects/WorkOrder/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>Prende numero di contratto dal contratto relativo</description>
    <formula>Contract__r.ContractNumber</formula>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>