force-app/main/default/objects/WorkOrder/fields/Is_Date_Inside_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Is_Date_Inside_Current_Year__c</fullName>
    <description>Controlla se il work order è chiuso e se è all&apos;interno dell&apos;anno corrente di contratto</description>
    <formula>IsClosed &amp;&amp; DATEVALUE(StartDate) &gt;= ADDMONTHS(Contract__r.Contract_Yearly_End_Date__c,-12) &amp;&amp; DATEVALUE(StartDate) &lt;= Contract__r.Contract_Yearly_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Date Inside Current Year</label>
    <type>Checkbox</type>
</CustomField>