force-app/main/default/objects/WorkOrder/fields/Remain_Contract_Hours__c.field-meta.xml
<CustomField>
    <fullName>Remain_Contract_Hours__c</fullName>
    <formula>Contract__r.Contract_Remain_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remain Contract Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>