force-app/main/default/objects/WorkOrder/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <label>Work Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Remote Connection</fullName>
                <default>true</default>
                <label>Remote Connection</label>
            </value>
            <value>
                <fullName>Internal Job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>